--- a/jasperreports/pom.xml
+++ b/jasperreports/pom.xml
@@ -16,9 +16,7 @@
 		</license>
 	</licenses>
 	<scm>
-		<connection>scm:svn:http://jasperforge.org/svn/repos/jasperreports</connection>
-		<tag>jr-4-7-1</tag>
-		<url>http://jasperforge.org/scm/viewvc.php/?root=jasperreports</url>
+		<connection>scm:git:git@github.com:Cosium/jasperreports.git</connection>
 	</scm>
 	<developers>
 		<developer>
@@ -132,14 +130,41 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<executions>
+					<execution>
+						<id>default</id>
+						<goals>
+							<goal>perform</goal>
+						</goals>
+						<configuration>
+							<pomFileName>jasperreports/pom.xml</pomFileName>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.0.1</version>
+				<configuration>
+					<failOnError>false</failOnError>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<distributionManagement>
 		<repository>
-			<id>sonatype-nexus-staging</id>
-			<name>Nexus Release Repository</name>
-			<url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+			<id>nexus-cosium-dev-releases</id>
+			<url>https://nexus.cosium.dev/repository/maven-releases/</url>
 		</repository>
+		<snapshotRepository>
+			<id>nexus-cosium-dev-snapshots</id>
+			<url>https://nexus.cosium.dev/repository/maven-snapshots/</url>
+		</snapshotRepository>
 	</distributionManagement>
 	<dependencies>
 		<dependency>
