--- a/jasperreports/pom.xml
+++ b/jasperreports/pom.xml
@@ -54,6 +54,7 @@
 	</repositories>
 	<properties>
 		<junit.version>5.6.1</junit.version>
+		<poi.version>4.1.2</poi.version>
 	</properties>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -261,7 +262,7 @@
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
-			<version>3.7</version>
+			<version>${poi.version}</version>
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
@@ -492,7 +493,7 @@
 		<dependency>
 		    <groupId>org.apache.poi</groupId>
 		    <artifactId>poi-ooxml</artifactId>
-		    <version>3.7</version>
+		    <version>${poi.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
